puxando pro local

--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -401,85 +401,85 @@
               <div class="linha01">
                 <label for="A">
                   <input type="radio" name="domestico" id="A" value="A">
-                  <img src="/img/Domiciliar.png" alt="Masculino">
+                  <img src="../img/Domiciliar.png" alt="Masculino">
                   <p>Doméstico</p>
                 </label>
                 <label for="B">
                   <input type="radio" name="animais" id="B" value="B">
-                  <img src="/img/Animal.png" alt="Feminino">
+                  <img src="../img/Animal.png" alt="Feminino">
                   <p>Causado por animais</p>
                 </label>
                 <label for="C">
                   <input type="radio" name="afogamento" id="C" value="C">
-                  <img src="/img/Afogamento.png" alt="Feminino">
+                  <img src="../img/Afogamento.png" alt="Feminino">
                   <p>Afogamento</p>
                 </label>
               </div>
               <div class="linha01">
                 <label for="D">
                   <input type="radio" name="enchente" id="D" value="D">
-                  <img src="/img/Enchente.png" alt="Masculino">
+                  <img src="../img/Enchente.png" alt="Masculino">
                   <p>Enchente</p>
                 </label>
                 <label for="E">
                   <input type="radio" name="desmoronamento" id="E" value="E">
-                  <img src="/img/Desmoronamento.png" alt="Feminino">
+                  <img src="../img/Desmoronamento.png" alt="Feminino">
                   <p>Desmoronamento</p>
                 </label>
                 <label for="F">
                   <input type="radio" name="ventos" id="F" value="F">
-                  <img src="/img/Ventosfortes.png" alt="Feminino">
+                  <img src="../img/Ventosfortes.png" alt="Feminino">
                   <p>Ventos fortes</p>
                 </label>
               </div>
               <div class="linha01">
                 <label for="G">
                   <input type="radio" name="incendio" id="G" value="G">
-                  <img src="/img/Incendio.png" alt="Masculino">
+                  <img src="../img/Incendio.png" alt="Masculino">
                   <p>Incêndio</p>
                 </label>
                 <label for="H">
                   <input type="radio" name="intoxicacao" id="H" value="H">
-                  <img src="/img/Intoxicacao.png" alt="Feminino">
+                  <img src="../img/Intoxicacao.png" alt="Feminino">
                   <p>Intoxicação</p>
                 </label>
                 <label for="I">
                   <input type="radio" name="acidenteCarro" id="I" value="I">
-                  <img src="/img/Acidentedecarro.png" alt="Feminino">
+                  <img src="../img/Acidentedecarro.png" alt="Feminino">
                   <p>Acidente de carro</p>
                 </label>
               </div>
               <div class="linha01">
                 <label for="J">
                   <input type="radio" name="choque" id="J" value="J">
-                  <img src="/img/Choque.png" alt="Masculino">
+                  <img src="../img/Choque.png" alt="Masculino">
                   <p>Choque</p>
                 </label>
                 <label for="K">
                   <input type="radio" name="agressao" id="K" value="K">
-                  <img src="/img/Agressao.png" alt="Feminino">
+                  <img src="../img/Agressao.png" alt="Feminino">
                   <p>Agressão</p>
                 </label>
                 <label for="L">
                   <input type="radio" name="queda" id="L" value="L">
-                  <img src="/img/Queda.png" alt="Feminino">
+                  <img src="../img/Queda.png" alt="Feminino">
                   <p>Queda</p>
                 </label>
               </div>
               <div class="linha01">
                 <label for="M">
                   <input type="radio" name="acidenteBicicleta" id="M" value="M">
-                  <img src="/img/Acidentedebicicleta.png" alt="Masculino">
+                  <img src="../img/Acidentedebicicleta.png" alt="Masculino">
                   <p>Acidente de bicicleta</p>
                 </label>
                 <label for="N">
                   <input type="radio" name="suicidio" id="N" value="N">
-                  <img src="/img/Suicidio.png" alt="Feminino">
+                  <img src="../img/Suicidio.png" alt="Feminino">
                   <p>Suicídio</p>
                 </label>
                 <label for="O">
                   <input type="radio" name="outro" id="O" value="O">
-                  <img src="/img/Outro.png" alt="Feminino">
+                  <img src="../img/Outro.png" alt="Feminino">
                   <p>Outro</p>
                 </label>
               </div>
