--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -78,13 +78,13 @@
     <div class="sexo">
       <div id="masculino">
         <input type="radio" name="sexoPaciente" value="Masculino" id="bolinhas">
-        <label id="generos" for="sexo"><img class="masculinofeminino" src="/img/masculino.svg" alt="" width="16%">
+        <label id="generos" for="sexo"><img class="masculinofeminino" src="../img/masculino.svg" alt="" width="16%">
           Masculino</label>
       </div>
 
       <div id="feminino">
         <input type="radio" name="sexoPaciente" value="Feminino" id="bolinhas">
-        <label id="generos" for="sexo"><img class="masculinofeminino" src="/img/feminino.svg" alt="" width="16%">
+        <label id="generos" for="sexo"><img class="masculinofeminino" src="../img/feminino.svg" alt="" width="16%">
           Feminino</label>
       </div>
     </div>
